:heavy_plus_sign: Added searchbar :heavy_plus_sign: Added menu header with number of results displayed :green_heart: fixed styling issues with the Cards where they stretched :green_heart: Changed from Material UI icons to Font Awesome because of more choice and better stylinh

--- a/client/src/components/Navbar/TopNav.module.css
+++ b/client/src/components/Navbar/TopNav.module.css
@@ -1,9 +1,9 @@
 .topnav {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 
 .navbarbrand {
-  margin: auto;
+  /* margin: auto; */
 }
